sass/acf-blocks/_hero-home.sass
.hero-home
    &__item-inner
        align-items: flex-end
        
    &__content-wrapper
        align-self: flex-end
        +max-screen($breakpoint-md)
            order: 2
        &:hover
            svg
                transform: translateX(10px)
        .h6
            text-transform: uppercase
        .h1
            // display: inlin-flex
            svg
                width: 70px
                +adaptive-value('height', 70, 57, 1)
                margin-bottom: -26px
                padding-left: 10px
                transition: $default-transition
    &__image-wrapper
        display: flex
        align-items: flex-end
        // height: 50vh
        // height: 50svh
        // max-height: 50vh
        // max-height: 50svh
        +max-screen($breakpoint-md)
            order: 1
            margin-bottom: .5rem
            height: auto
        img
            max-width: 100%
            max-height: 100%

            height: auto
            width: 100%

            aspect-ratio: 5 / 3
            
            object-fit: contain

